--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: LIQUIDCHURCH
+Theme Name: Liquid Church Theme
 Theme URI: https://liquidchurch.com/
 Author: Liquid Church, EmizenTech Team
 Author URI: http://liquidchurch.com/
@@ -10,7 +10,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, right-sidebar,custom-header, custom-menu, editor-style, featured-images, post-formats, rtl-language-support, sticky-post, translation-ready
 Text Domain: liquidchurch
 */
-.chk-box{
-vertical-align: middle;
-margin-right:5px;
+.chk-box {
+  vertical-align: middle;
+  margin-right: 5px;
 }
