- Refactoring #single-sermon-content to .lqdm-single-msg-details, changing from px to vw. - .lqd-header-logo now using padding instead of margin for padding on left. - Updating SVG files after running through CSSOMG. - Refining buttons on page headers away from older styling towards more BS4 styling. - Adding BS4 navwalker class, replacing old methods of modifying menu to work with BS. - Removing unneeded site-description, never used. - Simplifying messaging structure, migrating to BS4. - Refactoring social action bar to use SVG instead of fa. - Removing unused templates content-search-messages.php and content-sermon.php. - Removing unnecessary year specifiers from content-series.php shortcode, reformatting for readability.

--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -99,10 +99,8 @@ a.home-btn {
     color: #fff;
 }
 
-#single-sermon-content .row {
-    padding-bottom: 10px;
-    /*border-bottom: 1px solid #e2e2e2;*/
-    margin-bottom: 10px;
+.lqdm-single-msg-details .row {
+    padding-bottom: 1vw;
 }
 
 #message-summary .lqdm-right-col {
@@ -262,7 +260,7 @@ h1.lqdm-msg-title {
     /*width:30%;*/
 }
 
-#mav-single div.row.single-sermon-title {
+#mav-single div.row.lqdm-single-msg-title {
     padding-bottom: 1px;
     margin-bottom: 1px;
     padding-top:0;
