- Moving .search-field from lqd-messages.css to style.css, it is generic search styling. - Removing unnecessary styling rules and replacing with BS4 where possible. - Removing unnecessary specificity in CSS rules. - Refactoring naming of CSS rules, lqd- for general, lqdm- for message specific and plugin useful. If the rule is for messages but theme specific, use lqd-. - Refactoring to use utility classes for margins, padding, etc. - Reordering CSS to logical groups and page flow. - Additional breakpoint styling, especially of typography. - Moving all mobile app css into its own file, at least temporarily. - Removing unnecessary row class attached to individual details of messages in template-parts/part/sermons/* - Refactoring social actions display on single messages page.

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,26 @@ img {
     margin-bottom: 1.5em;
 }
 
+/* Search */
+.search-field {
+    width: 60%;
+    background: #e2e2e2;
+    box-shadow: none;
+    height: 60px;
+    padding-left: 20px;
+    border: 1px solid #ccc;
+}
+
+input.search-submit {
+    margin-right: 20px;
+    background: #14a7e0;
+    height: 60px;
+    color: #fff;
+    border: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 /**
  * Liquid Theme Specific
  */
