- Add center align to .lqdm-other-msg-header, remove from inline style. - Refactor padding for .entry-content into utility class on .entry-content container. - Remove extra </div> from message details. - Remove extra container on enclosing div for single message.

--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -46,6 +46,7 @@ a.lqd-home-btn {
 
 /* Header Before Other Messages in Series on Single Message Page */
 .lqdm-other-msg-header {
+    text-align: center;
 }
 
 /** Resources List */
